# fairwinds

./: .psqlrc.default  LICENSE.md  fairbot  fairbot.sh  fairwinds-gui.py
docs/: Makefile.am  asciidoc.conf  fairwinds-ad.adoc  fairwinds-equations.adoc  fairwinds-overview.adoc  fairwinds-pastables.adoc
docs/tutorial/: asciidoc.conf  tutorial-00.txt  tutorial-01.txt  tutorial-02.txt  tutorial-03.txt  tutorial-04.txt  tutorial-05.txt  tutorial-06.txt  tutorial-07.txt  tutorial-08.txt  tutorial-09.txt  tutorial-0a.txt  tutorial-0b.txt  tutorial-0c.txt  tutorial-0d.txt  tutorial-0e.txt  tutorial.adoc
docs/tutorial-menu/: tutorial-menu.adoc  tutorial.adoc
docs/tutorial-sql/: tutorial-sql.adoc  tutorial.adoc
